fix gallery letter spacing

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -2,6 +2,7 @@
   text-align: center;
   font-size: 18px;
   margin-bottom: 32px;
+  letter-spacing: normal;
   @media only screen and (min-width: 1440px) {
     margin-bottom: 80px;
   }
